added latest deals section

--- a/index.html
+++ b/index.html
@@ -181,9 +181,12 @@
             <img class="trust" src="./assets/trusted-badge.png" alt="" />
           </div>
         </div>
-      
       </section>
-
+      <!-- least container -->
+<div class="latest container">
+  <h2 class="latest_h font_Noto"> <span class="orange">Latest</span>   Deals</h2>
+  <p class="latest_p font_Inter"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+</div>
 
 
 
