added upper footer section with mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
   <h2 class="latest_h font_Noto"> <span class="orange">Latest</span>   Deals</h2>
   <p class="latest_p font_Inter"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 </div>
+<!-- image section -->
 
 
 
@@ -194,6 +195,27 @@
 
 
 
+
+
+<!-- image section -->
+
+<!-- last section -->
+
+<section class="last_section">
+<div class="last_content">
+<h2 class="join_h2 font_Noto">Join the colorful Bunch</h2>
+<br>
+<div class="input_section">
+<input class="input_email font_Inter" type="email" placeholder="Write email">
+<button class="input_btn">Subscribe</button>
+
+
+</div>
+
+
+</div>
+
+</section>
 
 
 
@@ -203,4 +225,7 @@
 
 
    
-  
+  <!-- <div class="div">
+  <input class="email font_Inter input" type="email" placeholder="Write email">
+<button class="btn_last">Subscribe</button>
+</div> -->
