added footer section with responsive mood

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     />
   </head>
   <body>
+    <main>
     <header class="container">
       <!-- Navigation Ber -->
       <nav class="navbar">
@@ -185,7 +186,7 @@
       <!-- least container -->
 <div class="latest container">
   <h2 class="latest_h font_Noto"> <span class="orange">Latest</span>   Deals</h2>
-  <p class="latest_p font_Inter"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+  <p class="latest_p font_Inter text_color"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 </div>
 <!-- image section -->
 
@@ -208,16 +209,61 @@
 <div class="input_section">
 <input class="input_email font_Inter" type="email" placeholder="Write email">
 <button class="input_btn">Subscribe</button>
+</div>
+</div>
+</section>
+</main>
+<!-- footer -->
+<footer>
+<section class="all_footer">
+<div class="footer_logo">
+<img src="./assets/logo.png" alt="">
 
-
+<p class="font_Inter text_color">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+</div>
+<div class="footer_link_one">
+<ul class="one">
+  <li>Home</li>
+  
+  <li>About Us</li>
+  
+  <li>Blog</li>
+  
+  <li>FAQ</li>
+  
+  <li>Contact Us</li>
+</ul>
+</div>
+<div class="footer_link_two">
+<ul>
+  <li>Features</li>
+  
+  <li>Pricing</li>
+  
+  <li>Privacy Policy</li>
+  
+  <li>Terms of Service</li>
+  
+  <li>Help Center</li>
+</ul>
+</div>
+<div class="social_media_logos">
+<p><img src="./assets/icon-linkedin.png" alt=""></p>
+<p><img src="./assets/icon-twitter.png" alt=""></p>
+<p><img src="./assets/icon-facebook.png" alt=""></p>
+<p><img src="./assets/icon-youtube.png" alt=""></p>
 </div>
 
 
-</div>
+
 
 </section>
 
 
+
+
+
+</footer>
 
 </body>
     </html>
@@ -225,7 +271,4 @@
 
 
    
-  <!-- <div class="div">
-  <input class="email font_Inter input" type="email" placeholder="Write email">
-<button class="btn_last">Subscribe</button>
-</div> -->
+  
