added responsive and recheaking

--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
 </div>
 <div class="social_media_logos">
 <p><img src="./assets/icon-linkedin.png" alt=""></p>
+<div class="twitter">
 <p><img src="./assets/icon-twitter.png" alt=""></p>
+</div>
 <p><img src="./assets/icon-facebook.png" alt=""></p>
 <p><img src="./assets/icon-youtube.png" alt=""></p>
 </div>
