--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body class="bg">
     <main>
     <header class="container">
       <!-- Navigation Ber -->
@@ -189,6 +189,41 @@
   <p class="latest_p font_Inter text_color"> Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 </div>
 <!-- image section -->
+
+ <section class="img_setup container">
+  <div class="img_1">
+    
+    <!-- Left Column with 2 images -->
+    <div class="img_2">
+      <div class="image_wrapper">
+        <img src="./assets/deal-bloom.png" alt="Bloom Plant">
+        <div class="bloom">
+          <h2 class="text">60% Off | Bloom Plant</h2>
+          <a class="shop_btn" href="#">Shop Now</a>
+        </div>
+      </div>
+      
+      <div class="image_wrapper">
+        <img src="./assets/deal-ana.png" alt="Ana Plant">
+        <div class="bloom">
+          <h2 class="text">30% Off | Ana Plant</h2>
+          <a class="shop_btn" href="#">Shop Now</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Right Column with 1 large image -->
+    <div class="img_3 image_wrapper">
+      <img src="./assets/deal-zabo.png" alt="Zabo Plant">
+      <div class="bloom">
+        <h2 class="text large_text">25% Off | Zabo Plant</h2>
+        <a class="shop_btn large_btn" href="#">Shop Now</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 
 
